Fix featured connector visible

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -271,6 +271,10 @@ body.fixed-header .navbar {
   zoom: 1.2;
 }
 
+.featured-connector {
+  z-index: -1;
+}
+
 .featured-connector,
 .featured-connector-dot,
 .featured-box {
@@ -403,7 +407,7 @@ body.fixed-header .navbar {
     left: 0;
     bottom: 0;
     width: 50%;
-    border-top: 2px solid var(--bg-color);
+    border-top: 4px solid var(--bg-color);
     z-index: 0;
   }
   .events-list .event:nth-child(even) .connector::after {
